# FastAPI_MVC_Example

./: Dockerfile  pyproject.toml
src/: settings.py
src/ASGI/: app.py
src/alembic/: env.py
src/controllers/: user.py
src/models/: base.py  dependencies.py  user.py
src/views/: users.py
tests/: conftest.py
