[tool.poetry]
name = "user-microservice"
version = "0.1.0"
description = ""
authors = ["ventura94 <arianventura94@gmail.com>"]
readme = "README.md"
packages = [{include = "user_microservice"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.11"
fernet = "^1.0.1"
uvicorn = "^0.21.1"
alembic = "^1.10.4"


[tool.poetry.group.formatters.dependencies]
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
