[tool.poetry]
name = "FastAPI MVC Example"
version = "0.1.0"
description = "This is an example of MVC with FastAPI"
authors = ["ventura94 <arianventura94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
fernet = "^1.0.1"
uvicorn = "^0.22.0"
alembic = "^1.10.4"

[tool.poetry.group.formatters.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
